--- a/Samples/seq2seq with Variation.ipynb
+++ b/Samples/seq2seq with Variation.ipynb
@@ -4,9 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# seq2seq\n",
+    "# seq2seq (With Variation)\n",
     "\n",
-    "This is an implementation of `seq2seq` using PyTorch. I figure this would be a good way of actually understanding on how to implement this kind of network. It looks like a pretty hefty many-to-many RNN that is split into two parts, an encoder and a decoder. We also have an attention variable which utilises the outputs of the encoders to help make a decision on the decoder's output. I'm using [this](https://pytorch.org/tutorials/intermediate/seq2seq_translation_tutorial.html) tutorial to help me build this model."
+    "This is a modified `seq2seq` network with some stochasticity added. This primarilly based around the research paper the ISO is modelled around. But I'll have to look into the parts so that I make sure the code I write makes sense.\n",
+    "\n",
+    "For this particular example I'll be using the french-english dataset that was used in the tutorial. This way I can benchmark it around something that already exists and is implemented. Later on I'll look into modelling it around the Amazon dataset.\n",
+    "\n",
+    "Note that the amazon dataset is conditional on the data parameters so that'll be additional work."
    ]
   },
   {
@@ -34,17 +38,6 @@
     "import torch.nn.functional as F\n",
     "\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this particular problem I'll be following the official PyTorch tutorial for 'seq2seq' which involves attempting to translate english into french. \n",
-    "\n",
-    "## Parsing the Dataset\n",
-    "\n",
-    "We'll need a dataset. We'll use [this one]( http://www.manythings.org/anki/). We'll start by loading this dataset and parsing it into a class."
    ]
   },
   {
@@ -91,13 +84,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note that the files are in unicode (since they may have accents); we'll need to turn them into ASCII. We can also use this opportunity to make everything lowercase, and trim punctuation."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -122,13 +108,6 @@
     "    s = re.sub(r\"([.!?])\", r\" \\1\", s)\n",
     "    s = re.sub(r\"[^a-zA-Z.!?]+\", r\" \", s)\n",
     "    return s"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll need to read the datafile, and split them by lines, and split lines into pairs."
    ]
   },
   {
@@ -172,13 +151,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll want to trim the data into relatively short and simple sentences. Let the max length = 10 words, including punctuation."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
@@ -213,17 +185,6 @@
     "\n",
     "def filterPairs(pairs):\n",
     "    return [pair for pair in pairs if filterPair(pair)]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The process for sanitising the data looks like:\n",
-    "\n",
-    "- Read the text file, split it into lines and pairs.\n",
-    "- Normalise the text.\n",
-    "- Make word lists from sentences in pairs."
    ]
   },
   {
@@ -280,7 +241,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Preparing the Training Data\n",
     "\n",
@@ -299,7 +262,8 @@
      0,
      3,
      8
-    ]
+    ],
+    "hidden": true
    },
    "outputs": [],
    "source": [
