initial commit of VAD code and updated logs

--- a/Samples/seq2seq with Variation.ipynb
+++ b/Samples/seq2seq with Variation.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-28T12:34:04.092411Z",
-     "start_time": "2019-01-28T12:34:03.857164Z"
+     "end_time": "2019-02-02T15:30:12.168921Z",
+     "start_time": "2019-02-02T15:30:11.878716Z"
     }
    },
    "outputs": [],
@@ -42,11 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-28T12:34:04.098450Z",
-     "start_time": "2019-01-28T12:34:04.094110Z"
+     "end_time": "2019-02-02T15:30:12.178303Z",
+     "start_time": "2019-02-02T15:30:12.171236Z"
     },
     "code_folding": [
      4
@@ -85,11 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-28T12:34:04.112031Z",
-     "start_time": "2019-01-28T12:34:04.099873Z"
+     "end_time": "2019-02-02T15:30:12.190016Z",
+     "start_time": "2019-02-02T15:30:12.179927Z"
     },
     "code_folding": [
      0,
@@ -112,11 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-28T12:34:04.129389Z",
-     "start_time": "2019-01-28T12:34:04.114281Z"
+     "end_time": "2019-02-02T15:30:12.287352Z",
+     "start_time": "2019-02-02T15:30:12.282301Z"
     },
     "code_folding": [
      0
@@ -152,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-28T12:34:04.146461Z",
-     "start_time": "2019-01-28T12:34:04.132064Z"
+     "end_time": "2019-02-02T15:30:12.414988Z",
+     "start_time": "2019-02-02T15:30:12.410751Z"
     },
     "code_folding": [
      2,
@@ -189,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-28T12:34:09.879079Z",
-     "start_time": "2019-01-28T12:34:04.149561Z"
+     "end_time": "2019-02-02T15:30:19.210470Z",
+     "start_time": "2019-02-02T15:30:13.059597Z"
     },
     "code_folding": [
      0
@@ -211,7 +211,7 @@
       "Counted words:\n",
       "fra 4489\n",
       "eng 2925\n",
-      "['nous sommes en train de nous en occuper .', 'we re handling it .']\n"
+      "['je suis humain .', 'i am human .']\n"
      ]
     }
    ],
@@ -296,11 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-01-28T13:07:02.383649Z",
-     "start_time": "2019-01-28T13:07:02.378338Z"
+     "end_time": "2019-02-02T15:30:31.905162Z",
+     "start_time": "2019-02-02T15:30:31.899225Z"
     }
    },
    "outputs": [],
@@ -327,8 +327,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-02T15:30:33.177162Z",
+     "start_time": "2019-02-02T15:30:33.171479Z"
+    }
+   },
    "outputs": [],
    "source": [
     "class BackwardRNN(nn.Module):\n",
@@ -342,8 +347,8 @@
     "        self.embedding = nn.Embedding(inputSize, hiddenSize)\n",
     "        self.gru = nn.GRU(hiddenSize, hiddenSize, bidirectional=False)\n",
     "    \n",
-    "    def forward(self, input, hidden):\n",
-    "        embedded = self.embedding(input).view(1,1,-1)\n",
+    "    def forward(self, inp, hidden):\n",
+    "        embedded = self.embedding(inp).view(1,1,-1)\n",
     "        output = embedded\n",
     "        output, hidden = self.gru(output, hidden)\n",
     "        return output, hidden\n",
