--- a/Samples/seq2seq.ipynb
+++ b/Samples/seq2seq.ipynb
@@ -387,9 +387,7 @@
     "\n",
     "    \n",
     "    def initHidden(self):\n",
-    "        return torch.zeros(1,1, self.hiddenSize, device=device)\n",
-    "    \n",
-    "        "
+    "        return torch.zeros(1,1, self.hiddenSize, device=device)"
    ]
   },
   {
